# python-starter-kit

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Licence  Makefile  README.md  docker-compose.yaml  poetry.toml  pyproject.toml
scripts/: coverage-report.sh  coverage.sh  docker-entrypoint.sh  e2e-test.sh  format.sh  integration-test.sh  lint.sh  setup.sh
src/sample_project/: __main__.py
tests/e2e/: test_add.py
